--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -4,6 +4,9 @@
   background: black;
 }
 
+.nav-list li {
+}
+
 /* The sticky class is added to the header with JS when it reaches its scroll position */
 .sticky {
   position: fixed;
