--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -5,7 +5,9 @@
 }
 
 .nav-list li {
+  padding-bottom: 20px;
 }
+
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
 .sticky {
