--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ body {
 header {
   background-color: grey;
   color: white;
-  padding-bottom: 50px; }
+  padding-bottom: 10px; }
 
 ul {
   list-style: none; }
@@ -15,6 +15,9 @@ ul {
   text-align: center;
   display: block;
   padding: 0; }
+  @media (min-width: 768px) {
+    .arrows {
+      grid-column: 1 / 3; } }
 
 .arrow-bottom {
   display: inline-block;
@@ -33,14 +36,21 @@ ul {
   border-top: 2px solid white;
   border-right: 2px solid white; }
 
+@media (min-width: 768px) {
+  #main-content .arrows {
+    display: none; } }
+
 .first-line {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   margin-top: 0;
   padding-bottom: 25px; }
+  @media (min-width: 768px) {
+    .first-line {
+      padding-bottom: 0; } }
 
-.first-line h2 {
+.name {
   margin: 0 auto;
   display: block;
   padding: 25px 0; }
@@ -56,9 +66,33 @@ ul {
 .second-line {
   text-align: center;
   padding-top: 30px; }
+  @media (min-width: 768px) {
+    .second-line {
+      display: grid;
+      grid-template-columns: 1fr 1fr; } }
+
+@media (min-width: 768px) {
+  .main-nav ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around; } }
 
 .project {
   text-align: center; }
+
+#main-content {
+  border-bottom: 1px solid grey; }
+
+@media (min-width: 768px) {
+  .projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr; } }
+
+@media (min-width: 1024px) {
+  .projects {
+    grid-template-columns: repeat(3, 1fr); } }
 
 .projects div {
   width: 90%;
@@ -69,6 +103,7 @@ body {
   text-align: center; }
 
 footer {
+  padding-top: 30px;
   width: 90%;
   margin: 0 auto; }
 
@@ -98,6 +133,9 @@ footer {
   width: 33%;
   margin-right: 5%;
   background: black; }
+
+.nav-list li {
+  padding-bottom: 20px; }
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
 .sticky {
