--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -7,7 +7,7 @@ header {
   // background-image: linear-gradient(to bottom right, #537895 0%, #09203f 74%);
   background-color: grey;
   color: white;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
   // height: 100vh;
 }
 
@@ -23,6 +23,9 @@ ul {
   text-align: center;
   display: block;
   padding: 0;
+  @include tablet {
+    grid-column: 1 / 3;
+  }
 }
 .arrow-bottom {
   display: inline-block;
@@ -37,6 +40,12 @@ ul {
 .second-line .arrow-bottom:hover {
   border-top: 2px solid white;
   border-right: 2px solid white;
+}
+
+#main-content .arrows {
+  @include tablet {
+    display: none;
+  }
 }
 
 // grow on click (brekas arrow)
