--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -33,9 +33,16 @@ $desktop-width: 1024px;
 // $dull-background: #8EE4AF;
 
 // Cappucino Color Pallette
-$primary-color: white;
-$light-background: #FBEEC1;
-$primary-background: #659DBD;
-$bright-background: #8D8741;
-$dull-background: #BC986A;
-$warm-background: #DAAD86;
+// $primary-color: white;
+// $light-background: #FBEEC1;
+// $primary-background: #659DBD;
+// $bright-background: #8D8741;
+// $dull-background: #BC986A;
+// $warm-background: #DAAD86;
+
+// Colorscheme from profile-pic
+ $dark-khaki: #BC936A;
+ $dark-olive-green: #35231A;
+ $light-grey: #D2D0D1;
+ $dim-grey: #605545;
+ $dark-slate-grey: #1E2327;
