--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
 body {
-  background: white;
-  font-family: 'Old Standard TT', serif; }
+  font-family: 'Montserrat', serif;
+  background-color: #f2f2f2;
+  color: rgba(0, 0, 0, 0.3); }
 
 header {
-  background-color: grey;
-  color: white;
   padding-bottom: 10px; }
 
 ul {
@@ -44,51 +43,87 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: 0;
-  padding-bottom: 25px; }
+  margin: 0;
+  padding-bottom: 25px;
+  background-color: rgba(0, 0, 0, 0.3); }
   @media (min-width: 768px) {
     .first-line {
       padding-bottom: 0; } }
+  @media (min-width: 1024px) {
+    .first-line {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      height: 10vh;
+      padding: 0 5%; } }
 
 .name {
   margin: 0 auto;
   display: block;
   padding: 25px 0; }
+  @media (min-width: 1024px) {
+    .name {
+      -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+      text-align: left;
+      -ms-flex-preferred-size: 33%;
+      flex-basis: 33%; } }
 
 .first-line .main-nav {
   margin: auto;
   display: block;
   width: 100%; }
+  @media (min-width: 1024px) {
+    .first-line .main-nav {
+      -ms-flex-preferred-size: 50%;
+      flex-basis: 50%; } }
 
 .nav-list {
-  padding: 0; }
+  padding: 0;
+  margin: 0; }
+  @media (min-width: 768px) {
+    .nav-list {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between; } }
 
 .second-line {
   text-align: center;
   padding-top: 30px; }
+  .second-line p {
+    padding: 10px;
+    line-height: 2; }
   @media (min-width: 768px) {
     .second-line {
       display: grid;
-      grid-template-columns: 1fr 1fr; } }
-
-@media (min-width: 768px) {
-  .main-nav ul {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: distribute;
-    justify-content: space-around; } }
+      grid-template-columns: 1fr 2fr;
+      height: 90vh;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center; }
+      .second-line p {
+        text-align: left;
+        margin-right: 10%;
+        padding: 30px; } }
 
 .project {
   text-align: center; }
 
 #main-content {
+  padding-bottom: 30px;
   border-bottom: 1px solid grey; }
+
+#portfolio {
+  padding: 25px 0 10px 0; }
 
 @media (min-width: 768px) {
   .projects {
     display: grid;
-    grid-template-columns: 1fr 1fr; } }
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px; } }
 
 @media (min-width: 1024px) {
   .projects {
@@ -104,7 +139,8 @@ body {
 
 footer {
   padding-top: 30px;
-  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
   margin: 0 auto; }
 
 .bottom-footer {
@@ -116,12 +152,11 @@ footer {
   justify-content: space-between; }
 
 .bottom-footer a {
-  text-decoration: none;
-  color: black; }
+  text-decoration: none; }
 
 .profile-pic {
   border-radius: 50%;
-  height: 200px;
+  width: 70%;
   margin: 0 auto; }
 
 .projects img {
@@ -129,13 +164,21 @@ footer {
   display: block;
   margin: 0 auto; }
 
+.project-images {
+  border-radius: 5px;
+  border: 1px grey solid;
+  -webkit-box-shadow: 0 8px 6px -6px black;
+  box-shadow: 0 8px 6px -6px black; }
+
 .main-nav {
   width: 33%;
-  margin-right: 5%;
-  background: black; }
+  margin-right: 5%; }
 
 .nav-list li {
   padding-bottom: 20px; }
+  @media (min-width: 1024px) {
+    .nav-list li {
+      padding-bottom: 0; } }
 
 /* The sticky class is added to the header with JS when it reaches its scroll position */
 .sticky {
@@ -151,7 +194,7 @@ nav a {
   text-decoration: none;
   font-weight: bold;
   font-size: 1.2em;
-  color: rgba(255, 255, 255, 0.5);
+  color: #f2f2f2;
   text-transform: uppercase; }
   nav a:hover {
     color: white; }
@@ -174,11 +217,12 @@ nav li {
 .active {
   color: white !important; }
 
-.first-line {
-  background-color: black; }
-
 h2 {
   padding-left: 20px; }
 
 .title {
   text-align: center; }
+
+.first-line h2,
+.first-line a {
+  color: #f2f2f2; }
