--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,12 +1,11 @@
 body {
-  background: white;
-  font-family: 'Old Standard TT', serif;
+  font-family: 'Montserrat', serif;
+  background-color: #f2f2f2;
+  color: darken(rgba(0, 0, 0, 0.3), 20%);
 }
 
 header {
   // background-image: linear-gradient(to bottom right, #537895 0%, #09203f 74%);
-  background-color: grey;
-  color: white;
   padding-bottom: 10px;
   // height: 100vh;
 }
