--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ ul {
 .contact-icons img:hover {
   opacity: 1; }
 
+nav a {
+  display: block; }
+
 .first-line {
   -webkit-box-align: center;
   -ms-flex-align: center;
