--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ footer {
   width: 70%;
   margin: 0 auto; }
 
+
 .projects img {
   width: 100%;
   display: block;
@@ -230,6 +231,16 @@ footer {
   margin-right: 5%; }
 
 @media (min-width: 1024px) {
+
+  .project-images {
+    filter: saturate(20%);
+    transition: all 0.5s;
+  }
+  .project-images:hover {
+    filter: saturate(120%);
+    transform: scale(1.1);
+  }
+
   .nav-list li {
     padding-bottom: 0; } }
 
